--- a/src/main/resources/assets/frozenup/lang/en_us.json
+++ b/src/main/resources/assets/frozenup/lang/en_us.json
@@ -15,7 +15,7 @@
   "block.frozenup.chilloo_feather_block_carpet": "Chilloo Feather Block Carpet",
   "block.frozenup.truffle_cake": "Truffle Cake",
   "block.frozenup.chilloo_feather_lamp": "Chilloo Feather Lamp",
-  "block.frozenup.frost_flower": "Frost Flower",
+  "block.frozenup.frozen_flower": "Frost Flower",
   "block.frozenup.potted_frozen_flower": "Potted Frozen Flower",
 
   "entity.frozenup.chilloo": "Chilloo",
