--- a/src/main/resources/assets/frozenup/lang/en_us.json
+++ b/src/main/resources/assets/frozenup/lang/en_us.json
@@ -7,13 +7,13 @@
   "item.frozenup.chilloo_spawn_egg": "Chilloo Spawn Egg",
   "item.frozenup.chilloo_feather": "Chilloo Feather",
   "item.frozenup.empty_mug": "Empty Mug",
-  "item.frozenup.chocolate_milk": "Chocolate Milk",
-  "item.frozenup.hot_chocolate": "Hot Chocolate",
-  "item.frozenup.cup_of_milk": "Mug of Milk",
+  "item.frozenup.mug_of_chocolate_milk": "Mug of Chocolate Milk",
+  "item.frozenup.mug_of_truffle_hot_chocolate": "Mug of Truffle Hot Chocolate",
+  "item.frozenup.mug_of_milk": "Mug of Milk",
 
   "block.frozenup.chilloo_feather_block": "Chilloo Feather Block",
   "block.frozenup.chilloo_feather_block_carpet": "Chilloo Feather Block Carpet",
-  "block.frozenup.truffle_cake": "Truffle Cake",
+  "block.frozenup.truffle_cake": "Chocolate Truffle Cake",
   "block.frozenup.chilloo_feather_lamp": "Chilloo Feather Lamp",
   "block.frozenup.frost_flower": "Frost Flower",
   "block.frozenup.potted_frost_flower": "Potted Frost Flower",
