--- a/src/main/resources/assets/frozenup/lang/en_us.json
+++ b/src/main/resources/assets/frozenup/lang/en_us.json
@@ -15,6 +15,10 @@
   "block.frozenup.chilloo_feather_block_carpet": "Chilloo Feather Block Carpet",
   "block.frozenup.truffle_cake": "Chocolate Truffle Cake",
   "block.frozenup.chilloo_feather_lamp": "Chilloo Feather Lamp",
+  "block.frozenup.empty_mug": "Empty Mug",
+  "block.frozenup.mug_of_milk": "Mug of Milk",
+  "block.frozenup.mug_of_chocolate_milk": "Mug of Chocolate Milk",
+  "block.frozenup.mug_of_truffle_hot_chocolate": "Mug of Truffle Hot Chocolate",
 
   "entity.frozenup.chilloo": "Chilloo",
 
